@@ -15,6 +15,7 @@ next (1.0):
 	- optional ActionBase introduced
 	- WebAction.getModels() throws ContentProcessingException
 	- pre-/post-processor sets must be reffered explicitly by ids and can be assigned to areas or single classes
+	- syntax of weberknecht.xml changed
 
 0.12.2:
 	- bugfix: fixed null pointer exception, when routing didn't match.
